<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_a_color"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:padding="8dp" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/button_red"
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/color_box"
            app:iconGravity="textStart"
            app:iconPadding="20dp"
            app:iconTint="@color/red"
            android:text="@string/red" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/button_green"
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/color_box"
            app:iconTint="@color/green"
            app:iconGravity="textStart"
            app:iconPadding="20dp"
            android:text="@string/green" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/button_yellow"
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/color_box"
            app:iconTint="@color/yellow"
            app:iconGravity="textStart"
            app:iconPadding="20dp"
            android:text="@string/yellow" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_cancel"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:focusable="false"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/cancel" />
</LinearLayout>
