<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/demo"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="false"
    tools:context=".DemoFragment">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="10dp"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:padding="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/form_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:clickable="true"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="8dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="5dp"
                    android:src="@drawable/ic_form"
                    app:tint="#4080ff" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:textSize="18sp"
                    android:text="@string/form"/>
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:padding="8dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_arrow_right"
                    app:tint="#808080" />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#c0c0c0"
                    android:layout_marginHorizontal="20dp"
                />
            <LinearLayout
                android:id="@+id/list_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:clickable="true"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="8dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="5dp"
                    android:src="@drawable/ic_list"
                    app:tint="#4080ff" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:textSize="18sp"
                    android:text="@string/list"/>
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:padding="8dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_arrow_right"
                    app:tint="#808080" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c0c0c0"
                android:layout_marginHorizontal="20dp"
                />
            <LinearLayout
                android:id="@+id/images_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:clickable="true"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="8dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="5dp"
                    android:src="@drawable/ic_images"
                    app:tint="#4080ff" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:textSize="18sp"
                    android:text="@string/images"/>
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:padding="8dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_arrow_right"
                    app:tint="#808080" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c0c0c0"
                android:layout_marginHorizontal="20dp"
                />
            <LinearLayout
                android:id="@+id/controls_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:clickable="true"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="8dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="5dp"
                    android:src="@drawable/ic_controls"
                    app:tint="#4080ff" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:textSize="18sp"
                    android:text="@string/controls"/>
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:padding="8dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_arrow_right"
                    app:tint="#808080" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c0c0c0"
                android:layout_marginHorizontal="20dp"
                />
            <LinearLayout
                android:id="@+id/picker_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:clickable="true"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="8dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="5dp"
                    android:src="@drawable/ic_picker"
                    app:tint="#4080ff" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:textSize="18sp"
                    android:text="@string/picker"/>
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:padding="8dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_arrow_right"
                    app:tint="#808080" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c0c0c0"
                android:layout_marginHorizontal="20dp"
                />
            <LinearLayout
                android:id="@+id/date_picker_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:clickable="true"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="8dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="5dp"
                    android:src="@drawable/ic_date_picker"
                    app:tint="#4080ff" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:textSize="18sp"
                    android:text="@string/date_picker"/>
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:padding="8dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_arrow_right"
                    app:tint="#808080" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c0c0c0"
                android:layout_marginHorizontal="20dp"
                />
            <LinearLayout
                android:id="@+id/alerts_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:clickable="true"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="8dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="5dp"
                    android:src="@drawable/ic_alert"
                    app:tint="#4080ff" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:textSize="18sp"
                    android:text="@string/alerts"/>
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:padding="8dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_arrow_right"
                    app:tint="#808080" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.core.widget.NestedScrollView>